[metadata]
name = elro_connects
author = Bas van den Berg, Johannes Kulick, Jan Bouwhuis
version = 0.3.3
description = Provides an API to the Elro Connects K1 Connector
long_description = file: README.md, LICENSE
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
packages = find:

[options.packages.find]
include =
    elro

[options.extras_require]
test =
    pytest
    pytest-cov
    asynctest
    pytest-asyncio
